Fixing the swagger and removing unused code